--- a/spec/index.html
+++ b/spec/index.html
@@ -3,11 +3,11 @@
 <script type="text/javascript" src="../build/cts.min.js"></script>
 <script type="text/javascript">
 	(function(cts) {
-		Repo = cts.repository("http://sosol.perseids.org/exist/rest/db/xq/CTS.xq?", 3);
+		Repo = cts.repository("http://localhost:8080/exist/rest/db/xq/CTS.xq?", 3);
 		Repo.addInventory("annotsrc", "Annotation's Sources");
 		Repo.load(
 			function() {
-				console.log(TestRepo.data["annotsrc"].getRaw());
+				console.log(Repo.inventories["annotsrc"].getRaw());
 			}
 		);
 	}(CTS));
