--- a/spec/index.html
+++ b/spec/index.html
@@ -2,7 +2,8 @@
 <head>
 <script type="text/javascript" src="../build/cts.min.js"></script>
 <script type="text/javascript" src="./jQuery.js"></script>
-<script type="text/javascript" src="../src/plugins/cts.jquery.js"></script>
+<script type="text/javascript" src="../src/i18n/en.js"></script>
+<script type="text/javascript" src="../src/plugins/ctsSelector.jquery.js"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
 		$(".target").ctsSelector({
@@ -13,16 +14,7 @@
 				"pilots" : "Pilots"
 			}
 		});
-	});/*
-	(function(cts) {
-		Repo = cts.repository("http://localhost:8080/exist/rest/db/xq/CTS.xq?", 3);
-		Repo.addInventory("annotsrc", "Annotation's Sources");
-		Repo.load(
-			function() {
-				console.log(Repo.inventories["annotsrc"].getRaw());
-			}
-		);
-	}(CTS));*/
+	});
 </script>
 </head>
 <body>
