Working prototype for cts.selector in jQuery

--- a/spec/index.html
+++ b/spec/index.html
@@ -19,6 +19,6 @@
 </script>
 </head>
 <body>
-	<input type="text" value="Target" class="target" />
+	<input type="text" value="Target" class="target" style="width:100%;" />
 </body>
 </html>
