--- a/spec/index.html
+++ b/spec/index.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="../build/cts.min.js"></script>
 <script type="text/javascript" src="./jQuery.js"></script>
 <script type="text/javascript" src="../src/i18n/en.js"></script>
-<script type="text/javascript" src="../src/plugins/ctsSelector.jquery.js"></script>
+<script type="text/javascript" src="../src/plugins/jquery.cts.selector.js"></script>
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.selector.css" />
 <script type="text/javascript">
 	$(document).ready(function() {
