--- a/spec/index.html
+++ b/spec/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<script type="text/javascript" src="../build/cts.min.js"></script>
+<script type="text/javascript" src="../src/cts.js"></script>
+<script type="text/javascript" src="../src/modules/repository.js"></script>
+<script type="text/javascript" src="../src/modules/i18n.js"></script>
 <script type="text/javascript" src="./jQuery.js"></script>
 <script type="text/javascript" src="../src/i18n/en.js"></script>
 <script type="text/javascript" src="../src/plugins/jquery.cts.selector.js"></script>
