Updated build directive

--- a/spec/index.html
+++ b/spec/index.html
@@ -19,7 +19,7 @@
 				"pilots" : "Pilots"
 			},
 			"retrieve" : "textarea.TEItext",
-			"retrieve_scope" : "text"
+			"retrieve_scope" : null
 		});
 
 	});
