Fixed bug when only one inventory

--- a/spec/index.html
+++ b/spec/index.html
@@ -15,8 +15,7 @@
 			"endpoint" : "http://localhost:8080/exist/rest/db/xq/CTS.xq?",
 			"version" : 3,
 			"inventories" : {
-				"annotsrc" : "Nice label for annotsrc",
-				"pilots" : "Pilots"
+				"annotsrc" : "Nice label for annotsrc"
 			},
 			"retrieve" : "textarea.TEItext",
 			"retrieve_scope" : null
