--- a/spec/index.html
+++ b/spec/index.html
@@ -15,7 +15,8 @@
 			"endpoint" : "http://localhost:8080/exist/rest/db/xq/CTS.xq?",
 			"version" : 3,
 			"inventories" : {
-				"annotsrc" : "Nice label for annotsrc"
+				"annotsrc" : "Nice label for annotsrc",
+				"pilots" : "Pilots"
 			},
 			"retrieve" : "textarea.TEItext",
 			"retrieve_scope" : null
