--- a/spec/index.html
+++ b/spec/index.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../src/plugins/jquery.cts.typeahead.js"></script>
 <script type="text/javascript" src="../src/plugins/jquery.cts.selector.js"></script>
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.selector.css" />
+<link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.typeahead.css" />
 <script type="text/javascript">
 	$(document).ready(function() {
 		$(".target").ctsTypeahead({
@@ -42,6 +43,6 @@
 </head>
 <body>
 	<textarea class="TEItext" style="width:100%; height:300px;"></textarea>
-	<input type="text" value="Target" class="target" style="width:100%;" />
+	<input type="text" class="target" style="width:100%;" />
 </body>
 </html>
