--- a/spec/index.html
+++ b/spec/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="../src/i18n/en.js"></script>
 <!-- Dependencies -->
 <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="../node_modules/handlebars/dist/handlebars.min.js"></script>
 <script type="text/javascript" src="../node_modules/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <!-- Plugins using dependencies -->
 <script type="text/javascript" src="../src/plugins/jquery.cts.typeahead.js"></script>
