Next step : Real passage retriever

--- a/spec/index.html
+++ b/spec/index.html
@@ -63,5 +63,6 @@
 -->
 	<textarea class="TEItext" style="width:100%; height:300px;"></textarea>
 	<input type="text" class="target" style="width:100%;" />
+	</div>
 </body>
 </html>
