--- a/spec/Service.html
+++ b/spec/Service.html
@@ -18,7 +18,9 @@
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.typeahead.css" />
 <script type="text/javascript">
 	$(document).ready(function() {
-		console.log(CTS.service.new("llt.tokenizer", {}))
+		LLT = CTS.service.new("llt.tokenizer", "http://services.perseids.org/llt/segtok", {});
+		LLT.options.text.value = $(".TEItext").val();
+		LLT.send();
 	});
 </script>
 </head>
@@ -30,8 +32,133 @@
 	<textarea class="TEItext2" style="width:100%; height:100px;"></textarea>
 	<input type="text" value="Target" class="target2" style="width:100%;" />
 -->
-	<textarea class="TEItext" style="width:100%; height:300px;"></textarea>
-	<input type="text" class="target" style="width:100%;" />
+	<textarea class="TEItext" style="width:100%; height:300px;"><?xml version="1.0" encoding="UTF-8"?>
+<GetPassage xmlns="http://chs.harvard.edu/xmlns/cts3">
+    <request>
+        <requestName>GetPassage</requestName>
+        <requestUrn>urn:cts:greekLit:tlg0019.tlg007.perseus-grc2:1-6</requestUrn>
+        <psg>1-6</psg>
+        <workurn>urn:cts:greekLit:tlg0019.tlg007.perseus-grc2</workurn>
+        <groupname xml:lang="en">Aristophanes</groupname>
+        <title xml:lang="eng">Lysistrata</title>
+        <label xml:lang="eng">Lysistrata</label>
+    </request>
+    <reply>
+        <passage>
+            <TEI xmlns="http://www.tei-c.org/ns/1.0">
+                <teiHeader type="text">
+                    <fileDesc>
+                        <titleStmt>
+                            <title type="work" n="Lys.">Lysistrata</title>
+                            <title type="sub">Machine readable text</title>
+                            <author n="Aristoph.">Aristophanes</author>
+                            <editor role="editor" n="OCT">F.W. Hall and W.M. Geldart</editor>
+                            <sponsor>Perseus Project, Tufts University</sponsor>
+                            <principal>Gregory Crane</principal>
+                            <respStmt>
+                                <resp>Prepared under the supervision of</resp>
+                                <name>Lisa Cerrato</name>
+                                <name>William Merrill</name>
+                                <name>Elli Mylonas</name>
+                                <name>David Smith</name>
+                            </respStmt>
+                            <funder n="org:AnnCPB">The Annenberg CPB/Project</funder>
+                        </titleStmt>
+                        <extent>About 145Kb</extent>
+                        <publicationStmt>
+                            <publisher>Trustees of Tufts University</publisher>
+                            <pubPlace>Medford, MA</pubPlace>
+                            <authority>Perseus Project</authority>
+                        </publicationStmt>
+                        <sourceDesc>
+                            <biblStruct>
+                                <monogr>
+                                    <author>Aristophanes</author>
+                                    <title>Aristophanes Comoediae, ed. F.W. Hall and W.M. Geldart, vol.
+							2</title>
+                                    <editor role="editor">F.W. Hall and W.M. Geldart</editor>
+                                    <imprint>
+                                        <pubPlace>Oxford</pubPlace>
+                                        <publisher>Clarendon Press, Oxford</publisher>
+                                        <date>1907</date>
+                                    </imprint>
+                                </monogr>
+                            </biblStruct>
+                        </sourceDesc>
+                    </fileDesc>
+                    <encodingDesc>
+                        <refsDecl>
+                            <refState unit="line"/>
+                        </refsDecl>
+                    </encodingDesc>
+                    <profileDesc>
+                        <langUsage>
+                            <language ident="grc">Greek</language>
+                        </langUsage>
+                    </profileDesc>
+                    <revisionDesc>
+                        <change who="Bridget Almas">
+                            <date>2014-06-09</date>
+				Converted from TEI edition at https://github.com/PerseusDL/canonical/blob/master/CTS_XML_TEI/perseus/greekLit/tlg0019/tlg006/tlg0019.tlg007.perseus-grc1.xml
+				Conversion involved: converting speaker tags to said tags, adding line numbers, converting div1 and div2 to divs.				
+			</change>
+                    </revisionDesc>
+                </teiHeader>
+                <text xml:lang="grc">
+                    <body>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="1">ἀλλʼ εἴ τις ἐς Βακχεῖον αὐτὰς ἐκάλεσεν,</l>
+                                </said>
+                            </div>
+                        </div>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="2">ἢ ʼς Πανὸς ἢ ʼπὶ Κωλιάδʼ ἢ ʼς Γενετυλλίδος,</l>
+                                </said>
+                            </div>
+                        </div>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="3">οὐδʼ ἂν διελθεῖν ἦν ἂν ὑπὸ τῶν τυμπάνων.</l>
+                                </said>
+                            </div>
+                        </div>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="4">νῦν δʼ οὐδεμία πάρεστιν ἐνταυθοῖ γυνή·</l>
+                                </said>
+                            </div>
+                        </div>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="5">πλὴν ἥ γʼ ἐμὴ κωμῆτις ἥδʼ ἐξέρχεται.</l>
+                                </said>
+                            </div>
+                        </div>
+                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
+                            <div type="textpart" subtype="Prologue">
+                                <said who="#Λυσιστράτη">
+                                    <l n="6">χαῖρʼ ὦ Καλονίκη.</l>
+                                </said>
+                            </div>
+                        </div>
+                    </body>
+                </text>
+            </TEI>
+        </passage>
+        <prevnext>
+            <prev/>
+            <next/>
+        </prevnext>
+        <subref xmlns=""/>
+    </reply>
+</GetPassage></textarea>
 	</div>
 </body>
 </html>
