--- a/spec/Service.html
+++ b/spec/Service.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="../src/cts.js"></script>
 <script type="text/javascript" src="../src/modules/utils.js"></script>
 <script type="text/javascript" src="../src/modules/repository.js"></script>
