--- a/spec/Service.html
+++ b/spec/Service.html
@@ -10,22 +10,41 @@
 <script type="text/javascript" src="../src/i18n/en.js"></script>
 <!-- Dependencies -->
 <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="../node_modules/handlebars/dist/handlebars.min.js"></script>
-<script type="text/javascript" src="../node_modules/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <!-- Plugins using dependencies -->
-<script type="text/javascript" src="../src/plugins/jquery.cts.typeahead.js"></script>
-<script type="text/javascript" src="../src/plugins/jquery.cts.selector.js"></script>
+<script type="text/javascript" src="../src/plugins/jquery.cts.service.js"></script>
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.selector.css" />
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.typeahead.css" />
 <script type="text/javascript">
 	$(document).ready(function() {
-		LLT = CTS.service.new("llt.tokenizer", "http://services.perseids.org/llt/segtok", {});
-		LLT.options.text.value = $(".TEItext").val();
-		LLT.send();
+		//LLT = CTS.service.new("llt.tokenizer", "http://services.perseids.org/llt/segtok", {});
+		//LLT.options.text.value = $(".TEItext").val();
+		//LLT.send();
+		$("#lltTokenizer").ctsService("llt.tokenizer", {
+			"endpoint" : "http://services.perseids.org/llt/segtok",
+			"DOM" : {
+				"text" : $(".TEItext")
+			},
+			"click" : ".button",
+			"trigger" : "tokenize!",
+			"callback" : function(data) {
+				console.log(data);
+			},
+			"show" : "SHOW_ME_THE_GONDOR"
+		});
+		$("#lltTokenizer").on("cts-service:llt.tokenizer:done", function() {
+			//console.log(data);
+		});
+		$(".toggle_button").on("click", function(e) {
+			e.preventDefault();
+			$("#lltTokenizer").trigger("SHOW_ME_THE_GONDOR");
+		});
 	});
 </script>
 </head>
 <body>
+<button class="button">Click me !</button> 
+<button class="toggle_button">Toggle me !</button>
+<div id="lltTokenizer"></div>
 <!--
 	<textarea class="TEItext" style="width:100%; height:100px;"></textarea>
 	<input type="text" value="Target" class="target" style="width:100%;" />
