Better test / example

--- a/spec/Service.html
+++ b/spec/Service.html
@@ -28,6 +28,7 @@
 			"trigger" : "tokenize!",
 			"callback" : function(data) {
 				console.log(data);
+				$(".TEItext").val(data);
 			},
 			"show" : "SHOW_ME_THE_GONDOR"
 		});
@@ -130,41 +131,6 @@
                             <div type="textpart" subtype="Prologue">
                                 <said who="#Λυσιστράτη">
                                     <l n="1">ἀλλʼ εἴ τις ἐς Βακχεῖον αὐτὰς ἐκάλεσεν,</l>
-                                </said>
-                            </div>
-                        </div>
-                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
-                            <div type="textpart" subtype="Prologue">
-                                <said who="#Λυσιστράτη">
-                                    <l n="2">ἢ ʼς Πανὸς ἢ ʼπὶ Κωλιάδʼ ἢ ʼς Γενετυλλίδος,</l>
-                                </said>
-                            </div>
-                        </div>
-                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
-                            <div type="textpart" subtype="Prologue">
-                                <said who="#Λυσιστράτη">
-                                    <l n="3">οὐδʼ ἂν διελθεῖν ἦν ἂν ὑπὸ τῶν τυμπάνων.</l>
-                                </said>
-                            </div>
-                        </div>
-                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
-                            <div type="textpart" subtype="Prologue">
-                                <said who="#Λυσιστράτη">
-                                    <l n="4">νῦν δʼ οὐδεμία πάρεστιν ἐνταυθοῖ γυνή·</l>
-                                </said>
-                            </div>
-                        </div>
-                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
-                            <div type="textpart" subtype="Prologue">
-                                <said who="#Λυσιστράτη">
-                                    <l n="5">πλὴν ἥ γʼ ἐμὴ κωμῆτις ἥδʼ ἐξέρχεται.</l>
-                                </said>
-                            </div>
-                        </div>
-                        <div type="edition" xml:lang="grc" n="urn:cts:greekLit:tlg0019.tlg007.perseus-grc2">
-                            <div type="textpart" subtype="Prologue">
-                                <said who="#Λυσιστράτη">
-                                    <l n="6">χαῖρʼ ὦ Καλονίκη.</l>
                                 </said>
                             </div>
                         </div>
