Typeahead has now a theoretical acceptance

--- a/spec/index.html
+++ b/spec/index.html
@@ -24,8 +24,9 @@
 				"annotsrc" : "Nice label for annotsrc",
 				"pilots" : "Pilots"
 			},
-			"retrieve" : "textarea.TEItext",
-			"retrieve_scope" : null
+			"retrieve" : false,
+			"passage" : false,
+			"theoretical" : true
 		});
 		/*
 		$(".target").ctsSelector({
