--- a/spec/index.html
+++ b/spec/index.html
@@ -25,8 +25,8 @@
 				"pilots" : "Pilots"
 			},
 			"retrieve" : false,
-			"passage" : false,
-			"theoretical" : true
+			"passage" : true,
+			"theoretical" : false
 		});
 		/*
 		$(".target").ctsSelector({
