--- a/spec/index.html
+++ b/spec/index.html
@@ -7,6 +7,7 @@
 		<li><a href="cts.service.html">CTS Service</a></li>
 		<li><a href="cts.typeahead.html">CTS Typeahead</a></li>
 		<li><a href="cts.selector.html">CTS Selector</a></li>
+		<li><a href="cts.xslt.html">CTS XSLT</a></li>
 	</ul>
 </body>
 </html>
