--- a/examples/cts.service.html
+++ b/examples/cts.service.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="../src/modules/text.js"></script>
 <script type="text/javascript" src="../src/modules/i18n.js"></script>
 <script type="text/javascript" src="../src/modules/service.js"></script>
+<script type="text/javascript" src="../src/services/llt.tokenizer.js"></script>
 <script type="text/javascript" src="../src/i18n/en.js"></script>
 <!-- Dependencies -->
 <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
