--- a/examples/cts.xslt.html
+++ b/examples/cts.xslt.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="../src/modules/i18n.js"></script>
 <script type="text/javascript" src="../src/modules/service.js"></script>
 <script type="text/javascript" src="../src/modules/xslt.js"></script>
+<script type="text/javascript" src="../src/xslt/llt.segtok_to_tb.js"></script>
 <script type="text/javascript" src="../src/i18n/en.js"></script>
 <!-- Dependencies -->
 <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
