--- a/examples/cts.typeahead.html
+++ b/examples/cts.typeahead.html
@@ -12,23 +12,29 @@
 <script type="text/javascript" src="../node_modules/typeahead.js/dist/typeahead.bundle.min.js"></script>
 <!-- Plugins using dependencies -->
 <script type="text/javascript" src="../src/plugins/jquery.cts.typeahead.js"></script>
-<script type="text/javascript" src="../src/plugins/jquery.cts.selector.js"></script>
-<link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.selector.css" />
 <link rel="stylesheet" type="text/css" href="../src/css/jquery.cts.typeahead.css" />
 <script type="text/javascript">
 	$(document).ready(function() {
 		$(".target").ctsTypeahead({
+			"endpoint" : "http://localhost:8080/exist/rest/db/xq/CTS.xq?",
 			"version" : 3,
 			"inventories" : {
 				"annotsrc" : "Nice label for annotsrc",
 				"pilots" : "Pilots"
 			},
-			"retrieve" : ".TEItext"
+			"retrieve" : ".TEItext",
+			"tokenizer" : function(query) {
+				var lang = $("input[name='lang']").val();
+				lang = (typeof lang !== "undefined" && lang.length === 3) ? ' lang:' + lang : "";
+				return Bloodhound.tokenizers.whitespace(query + lang);
+			},
+			"languages" : ["lat", "grc"]
 		});
 	});
 </script>
 </head>
 <body>
+	<input type="text" name="lang" value="" />
 	<textarea class="TEItext" style="width:100%; height:100px;"></textarea>
 	<input type="text" class="target" style="width:100%;" />
 </body>
