Fixed issue with simpleURL in jQuery.cts.typeahead.js

--- a/examples/cts.typeahead.html
+++ b/examples/cts.typeahead.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <script type="text/javascript" src="../src/cts.js"></script>
+<script type="text/javascript" src="../src/modules/endpoint.js"></script>
+<script type="text/javascript" src="../src/endpoints/endpoint.simpleUrl.js"></script>
 <script type="text/javascript" src="../src/modules/utils.js"></script>
 <script type="text/javascript" src="../src/modules/repository.js"></script>
 <script type="text/javascript" src="../src/modules/text.js"></script>
